fix navbar centering of elements
Previously the links were off-center due to padding.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ nav#navbar ul {
     display: flex;
     flex: 2;
     list-style-type: none;
+    padding: 0;
 }
 
 nav#navbar li {
